dom/base/Console.cpp
@@ -814,14 +814,11 @@ Console::Method(JSContext* aCx, MethodName aMethodName,
         language == nsIProgrammingLanguage::JAVASCRIPT2) {
       ConsoleStackEntry& data = *callData->mStack.AppendElement();
 
-      nsCString string;
-      rv = stack->GetFilename(string);
+      rv = stack->GetFilename(data.mFilename);
       if (NS_FAILED(rv)) {
         Throw(aCx, rv);
         return;
       }
-
-      CopyUTF8toUTF16(string, data.mFilename);
 
       int32_t lineNumber;
       rv = stack->GetLineNumber(&lineNumber);
@@ -832,13 +829,11 @@ Console::Method(JSContext* aCx, MethodName aMethodName,
 
       data.mLineNumber = lineNumber;
 
-      rv = stack->GetName(string);
+      rv = stack->GetName(data.mFunctionName);
       if (NS_FAILED(rv)) {
         Throw(aCx, rv);
         return;
       }
-
-      CopyUTF8toUTF16(string, data.mFunctionName);
 
       data.mLanguage = language;
     }
